syntax = "proto3";

package com.coding.grpc.message;

option java_multiple_files = true;
option java_package = "com.coding.grpc.message";
option java_outer_classname = "MessageProto";

service MessageService {
  // 发送短信验证码
  rpc SendSmsCode (SendSmsRequest) returns (SendSmsReply) {}
}

message SendSmsRequest {
  string phone = 1; //手机号
  string code = 2;//长度4～6的验证码
}

message SendSmsReply {
  bool result = 1; //是否发送成功
  string message = 2; //友好的异常原因
}